--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "author": "leokaka1",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --exec babel-node",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js --exec babel-node",
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.2.0",
-    "koa": "^2.6.2",
     "element-ui": "^2.4.11",
-    "@nuxtjs/axios": "^5.3.6"
+    "koa": "^2.6.2",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
